--- a/presenter-fragment-tests/src/main/res/layout/test_activity.xml
+++ b/presenter-fragment-tests/src/main/res/layout/test_activity.xml
@@ -5,7 +5,7 @@
         android:layout_height="match_parent">
 
     <fragment
-            android:name="com.screeninteraction.presenterfragment.TestFragment"
+            android:name="com.screeninteraction.fragmentpresetntertests.TestFragment"
             android:id="@+id/test_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
